<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Garage Door Opener</string>

    <string name="title_garage_overview">Overview</string>
    <string name="title_garage_opener">Door</string>
    <string name="title_garage_history">History</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>
    <string name="action_reconnect">Reconnect</string>

    <string name="status_string">Status:</string>
    <string name="status_connected">Connected to server.</string>
    <string name="status_trying">Trying to connect.</string>
    <string name="status_failed">Unable to connect.</string>

    <string name="tag_garage_history">garage_history</string>
    <string name="tag_garage_pager">garage_pager</string>

    <string name="pref_selected_door">selected_door</string>
    <string name="history_no_data">No history for</string>
    <string name="action_new_server">Add Server</string>
    <string name="title_add_server">Server Connection</string>
    <string name="hint_hostname">Hostname</string>
    <string name="hint_port">Port</string>
    <string name="get_server_data_button">Load Server Data</string>
    <string name="doors_string">Doors:</string>
    <string name="save">Save</string>
</resources>
